
Author:	mgambhir
Last modification:	Rev 3401 - 2011-10-22 15:46:57
Log message:	CSN: CSN-simcore-3401

- Patch by Timur Safin to build Vippy warning free with gcc 4.3.2

----------
mgambhir    Date: Wed Oct 23 14:48:32 EDT 2013  CSN: CSN-asimcore-379
                  Wed Oct 23 18:48:32 UTC 2013


Directory lib/libdraldb/include/asim
 TagVecDenseShortItemIdx.h Locally Modified          378 
 TagVecDictionary.h        Locally Modified          378 
 TagVecDenseDictionaryNF.h Locally Modified          378 
 TagVecDenseItemIdx.h      Locally Modified          378 
 TagVecDictionaryNF.h      Locally Modified          378 

Directory lib/libasim/src
 regexobj.cpp              Locally Modified          378 

Sync with Intel rev-3413

Author:	mgambhir
Last modification:	Rev 3413 - 2011-11-15 18:57:32
Log message:	CSN: CSN-simcore-3413

- Patch by Baida, Yuriy V to fix warnings when built with gcc 4.6

----------
mgambhir    Date: Wed Oct 23 16:26:59 EDT 2013  CSN: CSN-asimcore-380
                  Wed Oct 23 20:26:59 UTC 2013


Directory lib/libdraldb/include/asim
 TagVecDenseDictionary.h   Locally Modified          379 

Directory modules/controller/classic
 awb.cpp                   Locally Modified          379 
 awb-notcl.cpp             Locally Modified          379 
 args.cpp                  Locally Modified          379 

Second sync with Intel rev 3401, 3413
- In the previous sync, missed some changes to files that have different directories in the two
repositories

----------
mgambhir    Date: Wed Oct 23 19:45:45 EDT 2013  CSN: CSN-asimcore-381
                  Wed Oct 23 23:45:45 UTC 2013


Directory modules/controller/minimal
 args_mini.cpp             Locally Modified          380 

Sync with Intel simcore rev 3465

Author:	mgambhir
Last modification:	Rev 3465 - 2013-07-31 01:51:29
Log message:	CSN: CSN-simcore-3465

- models usign mini-controller can now start and stop event data collection
using -esc and -eec flags or through AWB GUI