@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Asim Base Library
-CSN=CSN-asimcore-381
+CSN=CSN-asimcore-382
 Name=asimcore
 Tag=v13.06
 Prerelease=1
