@@ -33,5 +33,7 @@ Awb module specification
 %export %dynamic CACHE_VOLTAGE 0 "Default Cache Voltage in mVolts"
 %export %dynamic IO_VOLTAGE 0 "Default IO Voltage in mVolts"
 %export %dynamic ANALOG_VOLTAGE 0 "Default Analog Voltage in mVolts"
+%export %dynamic DEFAULT_FREQUENCY 1000 "Default frequency in mHz"
+%export %dynamic DEFAULT_VOLTAGE 0 "Default Voltage in mVolts"
 
 %AWB_END
